fixed coverflow layout issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,15 +83,5 @@ h2 {
 
 
 
-@media screen and (max-width: 500px){
-	/*img {
-		display: block;
-		margin: 0 auto;
-		float: none;
-	}*/
-
 	
-
-	
-}
 
